src/test/ui/proc-macro/attribute-with-error.stderr
error[E0308]: mismatched types
  --> $DIR/attribute-with-error.rs:10:18
   |
LL |     let a: i32 = "foo";
   |                  ^^^^^ expected i32, found reference
   |
   = note: expected type `i32`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/attribute-with-error.rs:12:18
   |
LL |     let b: i32 = "f'oo";
   |                  ^^^^^^ expected i32, found reference
   |
   = note: expected type `i32`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/attribute-with-error.rs:25:22
   |
LL |         let a: i32 = "foo";
   |                      ^^^^^ expected i32, found reference
   |
   = note: expected type `i32`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/attribute-with-error.rs:35:22
   |
LL |         let a: i32 = "foo";
   |                      ^^^^^ expected i32, found reference
   |
   = note: expected type `i32`
              found type `&'static str`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
